# tap-geoip

./: README.md  debug.json  meltano.yml  pyproject.toml  tap-geoip.sh  tox.ini
tap_geoip/: auth.py  client.py  streams.py  tap.py
tap_geoip/tests/: __init__.py  test_core.py
